--- a/index.html
+++ b/index.html
@@ -87,11 +87,14 @@
           ></div>
           <div class="vertical_space space_background doodad" id="10"></div>
           <div class="vertical_space space_background deals" id="11"></div>
-          <div class="vertical_space" id="12"></div>
+          <div class="vertical_space space_background downsize" id="12"></div>
         </div>
       </div>
       <div class=" horizontal_spaces bottom_flex">
-        <div class="horizontal_space corner_spaces" id="20"></div>
+        <div
+          class="horizontal_space corner_spaces space_background baby"
+          id="20"
+        ></div>
         <div
           class="horizontal_first_space horizontal_space space_background deals"
           id="19"
